--- a/Projetos/Bathroom_HAKO.html
+++ b/Projetos/Bathroom_HAKO.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafasilart - Portfolio</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/x-icon" href="../imagens/icons/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
@@ -52,7 +53,7 @@
             <div class="gallery">
                
                 <img src="../imagens/Bathroom/bathroom_01.jpg" alt="Imagem do Projeto 1" class="project-image">
-                <p class="legendas"> Mei T-Pose Interior</p>
+                <p class="legendas"> Render Cycles</p>
 
 
                 <video autoplay loop muted playsinline width="1200" height="635">
@@ -60,39 +61,45 @@
                     Your browser does not support the video tag.
                   </video>
 
-                <p class="legendas"> HAKO Animations Cuts</p> 
+                <p class="legendas"> HAKO Animations (Bathroom) Cuts</p> 
 
                 <img src="../imagens/Bathroom/bathroom_02.jpg" alt="Imagem do Projeto 1" class="project-image">
-                <p class="legendas"> Mei T-Pose Interior</p>
+                <p class="legendas"> Render Cycles</p>
 
                 <img src="../imagens/Bathroom/bathroom_03.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Mei T-pose City</p> 
+                <p class="legendas"> Render Cycles</p> 
 
                 <img src="../imagens/Bathroom/bathroom_04.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei T-Pose Winter/Japan</p> 
+                <p class="legendas"> Render Cycles</p> 
 
                 
 
                 <img src="../imagens/Bathroom/bathroom_05.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei's Character-Sheet</p> 
+                <p class="legendas"> Render Cycles</p> 
 
                 <img src="../imagens/Bathroom/bathroom_06.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei's Character-Sheet 2</p> 
+                <p class="legendas"> Render Cycles</p> 
 
                 <img src="../imagens/Bathroom/bathroom_07.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei renders 'Cycles'</p>
+                <p class="legendas"> Wireframe</p>
 
                 <img src="../imagens/Bathroom/bathroom_09.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei Wireframe</p>
+                <p class="legendas"> Wireframe</p>
 
                 <img src="../imagens/Bathroom/bathroom_10.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei Wireframe</p>
+                <p class="legendas"> Wireframe</p>
 
                 <img src="../imagens/Bathroom/bathroom_11.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei Wireframe</p>
+                <p class="legendas"> Wireframe</p>
 
                 <img src="../imagens/Bathroom/bathroom_12.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei Wireframe</p>
+                <p class="legendas"> Wireframe </p>
+
+                <img src="../imagens/Bathroom/bathroom_13.jpg" alt="Imagem do Projeto 3" class="project-image">
+                <p class="legendas"> Wireframe </p>
+
+                <img src="../imagens/Bathroom/bathroom_14.jpg" alt="Imagem do Projeto 3" class="project-image">
+                <p class="legendas"> Bathrooom Assets </p>
 
             </div>
         </div>
