--- a/Projetos/Robot_Lea2.html
+++ b/Projetos/Robot_Lea2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafasilart - Portfolio</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/x-icon" href="../imagens/icons/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
@@ -45,17 +46,38 @@
                     <p>This small droid animation was created as part of a university project. It drew inspiration from BD1 (Star Wars) and the robots featured in WALL-E. This charming droid serves the purpose of diligently cleaning away dirt and debris.</p>
                 </div>
            
-            
+                <div class="gallery">
             <!-- Imagens adicionais abaixo do texto -->
-            <div class="gallery">
-                <div class="video-youtube">
-                <iframe width="800" height="400" src="https://www.youtube.com/embed/uo7RHzA-GFM?si=SdxwgYVMDTAdyd56" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                <img src="https://via.placeholder.com/800x600" alt="Imagem do Projeto 1" class="project-image">
-            </div>
-                <img src="https://via.placeholder.com/800x600" alt="Imagem do Projeto 2" class="project-image">
-                <img src="https://via.placeholder.com/800x600" alt="Imagem do Projeto 3" class="project-image">
-                <p>Aqui foram realizado os ahahahah</p>
-                <img src="https://via.placeholder.com/800x600" alt="Imagem do Projeto 3" class="project-image">
+             <video autoplay loop muted playsinline width="1200" height="635">
+                <source src="../imagens/Robot_LEA/Bot_animation.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="legendas"> Robot LEA2 Turntable</p>
 
+            <video autoplay loop muted playsinline width="1200" height="635">
+                <source src="../imagens/Robot_LEA/BOT_turntable.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="legendas"> Robot LEA2 Turntable</p>
+
+
+                <img src="../imagens/Robot_LEA/Bot_01.jpg" alt="Imagem do Projeto 2" class="project-image">
+                <p class="legendas"> Render cycles</p>
+
+                <img src="../imagens/Robot_LEA/Bot_02.jpg" alt="Imagem do Projeto 2" class="project-image">
+                <p class="legendas"> Render cycles</p>
+
+
+                <img src="../imagens/Robot_LEA/Bot_03.jpg" alt="Imagem do Projeto 2" class="project-image">
+                <p class="legendas"> Render viewport</p>
+
+
+                <img src="../imagens/Robot_LEA/Bot_04.jpg" alt="Imagem do Projeto 2" class="project-image">
+                <p class="legendas"> Wireframe</p>
+
+                <img src="../imagens/Robot_LEA/Bot_05.jpg" alt="Imagem do Projeto 2" class="project-image">
+                <p class="legendas"> Blender project scene</p>
+                </div>
             </div>
         </div>
     </section>
