--- a/Projetos/Mei_HAKO.html
+++ b/Projetos/Mei_HAKO.html
@@ -42,6 +42,7 @@
             
                 <div class="text-container">
                     <h1>MEI - Character from 3D Animation "HAKO"</h1>
+                    <h6 class="calendario"> July 17, 2024</h6> 
                     <p>This character is part of an animation created for the final project of the Multimedia degree. The project consisted of a short 3D animated film named 'HAKO.' 
                       <p> The character, Mei, is a young Japanese woman seeking to uncover the truth about the box that haunts her and the meaning of her dreams.</p> 
                       <h5> Animation Synopsis:</h5> 
