--- a/Projetos/Robot_Lea2.html
+++ b/Projetos/Robot_Lea2.html
@@ -43,6 +43,7 @@
         
                 <div class="text-container">
                     <h1>Robot LEA2</h1>
+                    <h6 class="calendario"> July 9, 2023</h6> 
                     <p>This small droid animation was created as part of a university project. It drew inspiration from BD1 (Star Wars) and the robots featured in WALL-E. This charming droid serves the purpose of diligently cleaning away dirt and debris.</p>
                 </div>
            
@@ -55,25 +56,17 @@
               <p class="legendas"> Robot LEA2 Turntable</p>
 
             <video autoplay loop muted playsinline width="1200" height="635">
-                <source src="../imagens/Robot_LEA/BOT_turntable.mp4" type="video/mp4">
+                <source src="../imagens/Robot_LEA/BOT_turntable01.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <p class="legendas"> Robot LEA2 Turntable</p>
 
 
                 <img src="../imagens/Robot_LEA/Bot_01.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Render cycles</p>
+                <p class="legendas"> RobotLea2 Render cycles</p>
 
                 <img src="../imagens/Robot_LEA/Bot_02.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Render cycles</p>
-
-
-                <img src="../imagens/Robot_LEA/Bot_03.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Render viewport</p>
-
-
-                <img src="../imagens/Robot_LEA/Bot_04.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Wireframe</p>
+                <p class="legendas"> RobotLea2 Wireframe</p>
 
                 <img src="../imagens/Robot_LEA/Bot_05.jpg" alt="Imagem do Projeto 2" class="project-image">
                 <p class="legendas"> Blender project scene</p>
