--- a/Projetos/Bathroom_HAKO.html
+++ b/Projetos/Bathroom_HAKO.html
@@ -42,6 +42,9 @@
             
                 <div class="text-container">
                     <h1>BATHROOM - from 'HAKO' 3D SHORT ANIMATION</h1>
+
+                    <h6 class="calendario"> July 20, 2024</h6> 
+
                     <p>This is one of the environments created for the animated short 'HAKO.' The space features shades of pink and lilac, giving it a more feminine and intimate feel.  
                       <p> The environment was entirely modeled from scratch in Blender.</p> 
                       <h5> Animation Synopsis:</h5> 
