--- a/Projetos/Islander.html
+++ b/Projetos/Islander.html
@@ -42,6 +42,7 @@
             
                 <div class="text-container">
                     <h1>Islander - 3D Stylized Character</h1>
+                    <h6 class="calendario"> June 19, 2023</h6> 
                     <p> I made a recreation of the artwork "Islander" by the artist HOAIartworks. I discovered the work on Pinterest and decided to invest some time in recreating the character who has a more tribal and explorer style. </p>
                       
                 </div>
