--- a/Projetos/Tifa_Lockhart.html
+++ b/Projetos/Tifa_Lockhart.html
@@ -42,6 +42,9 @@
             
                 <div class="text-container">
                     <h1>Tifa Lockhart 3D (Stylized/Cartoon) - Final Fantasy 7</h1>
+
+                    <h6 class="calendario"> July 19, 2023</h6> 
+
                     <p> In this personal project, my objective was to craft an exquisitely stylized rendition of Final Fantasy 7's iconic character - Tifa Lockhart.
                          With Brian Sculpts' videos tutorial, I followed his tutorial on character design and helped me create a workflow for future projects (Sculpt, Remesh, Retopology, Rig, Modeling, Texture and Render).
                         Immersing myself in this creative pursuit, I undertook the arduous task of making a simpler and more whimsical version of Tifa, 
