--- a/projects.html
+++ b/projects.html
@@ -37,16 +37,42 @@
                     <a href="Projetos/HAKO.html" class="project-link cover-image_Project">
                         <img src="imagens/Capas/HAKO.jpg" alt="Capa do Projeto">
                     </a>
-                    <div class="project-title">HAKO Short Animation</div> <!-- Title below image -->
+                    <div class="project-title">HAKO Short Film Animation</div> <!-- Title below image -->
                 </div>
     
-                <!-- Projeto 5 -->
+                <!-- Ecosteel -->
                 <div class="header">
-                    <a href="" class="project-link cover-image_Project">
+                    <a href="Projetos/Ecosteel.html" class="project-link cover-image_Project">
                         <img src="imagens/Capas/Ecosteel.png" alt="Capa do Projeto">
                     </a>
                     <div class="project-title">Ecosteel - Animation</div> <!-- Title below image -->
                 </div>
+
+                 <!-- Animations skteches -->
+                 <div class="header">
+                    <a href="Projetos/Animation_Sketches.html" class="project-link cover-image_Project">
+                        <img src="imagens/Capas/Animations_sketches.png" alt="Capa do Projeto">
+                    </a>
+                    <div class="project-title">Animation Shorts Sketches</div> <!-- Title below image -->
+                </div>
+
+                 <!-- VR - Dissonance -->
+                 <div class="header">
+                    <a href="Projetos/Dissonance_VR.html" class="project-link cover-image_Project">
+                        <img src="imagens/Capas/VR_Dissonance.jpg" alt="Capa do Projeto">
+                    </a>
+                    <div class="project-title">VR Experience - Dissonance</div> <!-- Title below image -->
+                </div>
+
+                 <!-- AR Project -->
+                 <div class="header">
+                    <a href="Projetos/Cinanima_AR.html" class="project-link cover-image_Project">
+                        <img src="imagens/Capas/Cinanima_AR_Capa.jpg" alt="Capa do Projeto">
+                    </a>
+                    <div class="project-title">Cinanima Festival - AR APP</div> <!-- Title below image -->
+                </div>
+
+               
             </div>
         </section>
 
