--- a/Projetos/Cemetery_HAKO.html
+++ b/Projetos/Cemetery_HAKO.html
@@ -24,11 +24,11 @@
     
         <!-- Menu de navegação -->
         <ul id="nav-links">
-            <li><a href="index.html">Portfolio</a></li>
+            <li><a href="../index.html">Portfolio</a></li>
             <li>|</li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="../projects.html">Projects</a></li>
             <li>|</li>
-            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="../aboutme.html">About Me</a></li>
         </ul>
     </nav>
 
