--- a/Projetos/Crimson.html
+++ b/Projetos/Crimson.html
@@ -62,7 +62,7 @@
         
 
                 <img src="../imagens/Crimson/crimson_02.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Tifa viewport/Wireframe</p>
+                <p class="legendas"> Crimson viewport/Wireframe</p>
 
                 <video autoplay loop muted playsinline width="1200" height="635">
                     <source src="../imagens/Crimson/Crimson_evolution.mp4" type="video/mp4">
