--- a/Projetos/Islander.html
+++ b/Projetos/Islander.html
@@ -54,29 +54,29 @@
                     <source src="../imagens/Islander/islander_turntable.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
-                <p class="legendas"> Mei's Turntable</p> 
+                <p class="legendas"> Islander render</p> 
 
 
                 <img src="../imagens/Islander/islander_01.jpg" alt="Imagem do Projeto 1" class="project-image">
-                <p class="legendas"> Mei T-Pose Interior</p>
+                <p class="legendas"> Islander render & original art</p>
 
                 <img src="../imagens/Islander/islander_02.jpg" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Mei T-pose City</p> 
+                <p class="legendas"> Islander renders Cycles</p> 
 
                 <img src="../imagens/Islander/islander_07.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei T-Pose Winter/Japan</p> 
+                <p class="legendas"> Islander renders Cycles</p> 
 
                 
 
                 <img src="../imagens/Islander/islander_08.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei's Character-Sheet</p> 
+                <p class="legendas"> Islander render Cycles</p> 
 
 
                 <img src="../imagens/Islander/islander_06.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei renders 'Cycles'</p>
+                <p class="legendas">  Islander Wireframe</p>
 
                 <img src="../imagens/Islander/islander_evo.gif" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei Wireframe</p>
+                <p class="legendas"> Islander evolution</p>
 
             </div>
         </div>
