--- a/Projetos/Grandma.html
+++ b/Projetos/Grandma.html
@@ -24,11 +24,11 @@
     
         <!-- Menu de navegação -->
         <ul id="nav-links">
-            <li><a href="index.html">Portfolio</a></li>
+            <li><a href="../index.html">Portfolio</a></li>
             <li>|</li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="../projects.html">Projects</a></li>
             <li>|</li>
-            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="../aboutme.html">About Me</a></li>
         </ul>
     </nav>
 
@@ -56,7 +56,7 @@
                     <source src="../imagens/Grandma/grandma_turntable.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
-                <p class="legendas"> Mei's Turntable</p> 
+                <p class="legendas"> Grandma Turntable</p> 
 
                 <video autoplay loop muted playsinline width="1200" height="635">
                     <source src="../imagens/Grandma/grandma_clips.mp4" type="video/mp4">
@@ -65,13 +65,13 @@
                 <p class="legendas"> HAKO Animations Cuts</p> 
 
                 <img src="../imagens/Grandma/grandma01.jpg" alt="Imagem do Projeto 1" class="project-image">
-                <p class="legendas"> Mei T-Pose Interior</p>
+                <p class="legendas"> Grandma Render Cycles</p>
 
                 <img src="../imagens/Grandma/Grandma03.png" alt="Imagem do Projeto 2" class="project-image">
-                <p class="legendas"> Mei T-pose City</p> 
+                <p class="legendas"> Grandma HAKO frame</p> 
 
                 <img src="../imagens/Grandma/grandma02.jpg" alt="Imagem do Projeto 3" class="project-image">
-                <p class="legendas"> Mei T-Pose Winter/Japan</p> 
+                <p class="legendas"> Textures</p> 
 
                 
 
