--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
                       <p>  &nbsp; </p>
                      <p> In my free time, I enjoy creating scenes and animating characters in Blender. I am also deeply interested in the world of games and music; I play the clarinet and have completed the 5th grade in music at a conservatory.</p>
                     
-                    <a href="seu-cv.pdf" class="download-btn" download>Baixar CV</a>
+                    <a href="imagens/Curriculo_RafaelSilva.pdf" class="download-btn" download>Baixar CV</a>
                     
                     <p class="email"><a href="mailto:rafasilart@exemplo.com">rafasilart@gmail.com</a></p>
                 </div>
