--- a/Projetos/HAKO.html
+++ b/Projetos/HAKO.html
@@ -45,7 +45,7 @@
                     <p>As the final project for the Multimedia Degree at the School of Media Arts and Design of the Polytechnic Institute of Porto (ESMAD P.PORTO), a 3D animation short film was developed. 
                       <p> This animation was created in collaboration with Álvaro Miranda.</p> 
 
-                      <p> <strong>Exposition in teh Bang Awards Animation Festival, Torres Vedras, CAC - <a href="https://bang-awards.com/bang-programa-2024.pdf">2024 BANG AWARDS PROGRAM</a></strong></p> 
+                      <p> <strong>Exposition in the Bang Awards Animation Festival, Torres Vedras, CAC - <a href="https://bang-awards.com/bang-programa-2024.pdf">2024 BANG AWARDS PROGRAM</a></strong></p> 
                       <h5> Animation Synopsis:</h5> 
                        <p> The story takes place during one of the routine days of Mei, a young woman tormented by recurring dreams of a mysterious box adorned with a lotus flower. When the box begins to appear in her real life, Mei embarks on a journey of self-discovery to uncover its secrets and confront repressed memories.</p>
                 </div>
