--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <div class="container">
 
      <div class="reel">
-        
-        <iframe src="https://player.vimeo.com/video/1013837884?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="675" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Showreel 2024 - 3D artist (Multimedia)"></iframe>    
+        <iframe width="675" height="360" src="https://www.youtube.com/embed/-gPhLO7OUw8?si=8SG45GzwmZpOj1Jc&modestbranding=1&rel=0&autohide=1&fs=0&disablekb=1"  title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 <div>
     <p>Hi there!! Below, you'll find a selection of my work from school projects as well as some personal creations. Feel free :) </p>
