New Menu Filter, Hamburger Bar and Up Arrow

--- a/aboutme.html
+++ b/aboutme.html
@@ -115,6 +115,9 @@
     </div>
 
 
+    <a href="#" class="back-to-top">
+      <img src="imagens/icons/Arrow.png" alt="" srcset="">
+    </a>
 
        <!-- Footer Simples -->
        <footer>
@@ -140,5 +143,6 @@
     <script>
         AOS.init();
     </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
