--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,11 @@
             </div>
         </section>
 
+        <a href="#" class="back-to-top">
+            <img src="imagens/icons/Arrow.png" alt="" srcset="">
+          </a>
+
+          
         <footer>
             <div class="footer-content">
                 <p>© 2024 Rafael Silva (Rafasilart). Todos os direitos reservados.</p>
@@ -83,6 +88,10 @@
                 <p>Rafasilart - <a href="">rafasilart@gmail.com</a> </p>
             </div>
         </footer>
+
+        <a href="#" class="back-to-top">
+            <img src="imagens/icons/Arrow.png" alt="" srcset="">
+          </a>
     </div>
 
     <script>
@@ -95,5 +104,6 @@
     <script>
         AOS.init();
     </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
