--- a/Projetos/HAKO.html
+++ b/Projetos/HAKO.html
@@ -45,7 +45,7 @@
                     <p>As the final project for the Multimedia Degree at the School of Media Arts and Design of the Polytechnic Institute of Porto (ESMAD P.PORTO), a 3D animation short film was developed. 
                       <p> This animation was created in collaboration with Álvaro Miranda.</p> 
 
-                      <p> <strong>Exhibition in the Bang Awards Animation Festival, Torres Vedras, CAC - <a href="https://bang-awards.com/bang-programa-2024.pdf">2024 BANG AWARDS PROGRAM</a></strong></p> 
+                      <p> <strong>Exposition in teh Bang Awards Animation Festival, Torres Vedras, CAC - <a href="https://bang-awards.com/bang-programa-2024.pdf">2024 BANG AWARDS PROGRAM</a></strong></p> 
                       <h5> Animation Synopsis:</h5> 
                        <p> The story takes place during one of the routine days of Mei, a young woman tormented by recurring dreams of a mysterious box adorned with a lotus flower. When the box begins to appear in her real life, Mei embarks on a journey of self-discovery to uncover its secrets and confront repressed memories.</p>
                 </div>
@@ -198,6 +198,9 @@
         </div>
       </footer>
 
+      <a href="#" class="back-to-top">
+        <img src="../imagens/icons/Arrow.png" alt="" srcset="">
+      </a>
 
 <!-- Modal -->
 <div id="myModal" class="modal">
@@ -250,7 +253,7 @@
             nav.classList.toggle('show');
         }
     </script>
-<script src="java.js"></script>
+<script src="../scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init();
