--- a/Projetos/Animation_Sketches.html
+++ b/Projetos/Animation_Sketches.html
@@ -90,6 +90,9 @@
         </div>
       </footer>
 
+      <a href="#" class="back-to-top">
+        <img src="../imagens/icons/Arrow.png" alt="" srcset="">
+      </a>
 
 <!-- Modal -->
 <div id="myModal" class="modal">
@@ -142,7 +145,7 @@
             nav.classList.toggle('show');
         }
     </script>
-<script src="java.js"></script>
+<script src="../scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init();
