--- a/Projetos/Cinanima_AR.html
+++ b/Projetos/Cinanima_AR.html
@@ -93,7 +93,9 @@
         </div>
       </footer>
 
-
+      <a href="#" class="back-to-top">
+        <img src="../imagens/icons/Arrow.png" alt="" srcset="">
+      </a>
 <!-- Modal -->
 <div id="myModal" class="modal">
     <span class="close" onclick="closeModal()">&times;</span>
@@ -145,7 +147,7 @@
             nav.classList.toggle('show');
         }
     </script>
-<script src="java.js"></script>
+<script src="../scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init();
