--- a/Projetos/Dissonance_VR.html
+++ b/Projetos/Dissonance_VR.html
@@ -85,7 +85,9 @@
           <p>Rafasilart - <a href="">rafasilart@gmail.com</a> </p>
         </div>
       </footer>
-
+      <a href="#" class="back-to-top">
+        <img src="../imagens/icons/Arrow.png" alt="" srcset="">
+      </a>
 
 <!-- Modal -->
 <div id="myModal" class="modal">
@@ -138,7 +140,7 @@
             nav.classList.toggle('show');
         }
     </script>
-<script src="java.js"></script>
+<script src="../scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init();
