--- a/Projetos/Ecosteel.html
+++ b/Projetos/Ecosteel.html
@@ -254,6 +254,13 @@
         showSlides(slideIndex = n);
     }
 
+    // Fechar modal ao clicar fora da imagem
+    modal.addEventListener('click', function(event) {
+        if (event.target === modal) {
+            closeModal();
+        }
+    });
+
     // Mudar slide
     function changeSlide(n) {
         showSlides(slideIndex += n);
