--- a/Projetos/HAKO.html
+++ b/Projetos/HAKO.html
@@ -121,7 +121,7 @@
                 </p>
 
             </div> 
-            <p class="legendas">HAKO Gallery</p>
+            <p class="legendas-gallery">HAKO Gallery</p>
 
             <div class="gallery-row">
                 <div class="gallery-column">
@@ -232,11 +232,11 @@
             </div>
             
             <div class="social-icons">
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-artstation"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            </div>
+                    <a href="https://www.linkedin.com/in/rafasilart/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.artstation.com/rafasilart" target="_blank"><i class="fab fa-artstation"></i></a>
+                    <a href="https://www.instagram.com/rafasilart/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/rafasilart" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
             
             <div class="copyright">
                 <p>© 2024 Rafael Silva (Rafasilart). Todos os direitos reservados.</p>
