--- a/Projetos/projeto1.html
+++ b/Projetos/projeto1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" type="image/x-icon" href="../imagens/icons/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   
