--- a/Projetos/LeiDaParidade.html
+++ b/Projetos/LeiDaParidade.html
@@ -54,10 +54,10 @@
                   including all design elements, for client and artist approval. 
                   At the end of this page, you can find photographs from the final event, 
                   which took place at the Theater Maria Matos.</p>
-                <p><strong>Lei da Paridade - Live</strong>
+                
                   <a class="link-eventos" href="https://comunidadeculturaearte.com/lei-da-paridade-salta-das-plataformas-de-podcast-para-o-palco-do-teatro-maria-matos-em-abril-e-maio/" 
                    >
-                    EVENT
+                  <strong>Lei da Paridade Event</strong>
                     </a></strong></p>
 
                     <p>At the end, I also provide a PDF with all the measurements and necessary information, making it easier for clients and artists to understand the project and helping to translate the ideas from the producer and designer into a clear visual format.</p>
