--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
 
      <div class="reel">
-        <iframe width="200" height="330" src="https://www.youtube.com/embed/-gPhLO7OUw8?si=8SG45GzwmZpOj1Jc&modestbranding=1&rel=0&autohide=1&fs=1&disablekb=1" title="YouTube video player" frameborder="0" 
+        <iframe width="200" height="330" src="https://www.youtube.com/embed/goWSI6aY64c?modestbranding=1&rel=0&autohide=1&fs=1&disablekb=1" title="YouTube video player" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -58,7 +58,7 @@
         <span class="filter selected" data-filter="all">All</span> |
         <span class="filter" data-filter="characters">Characters</span> |
         <span class="filter" data-filter="environments">Environments</span> |
-        <span class="filter" data-filter="visuals">Vizualization</span>
+        <span class="filter" data-filter="visuals">Visualization</span>
     </div>
     
 </div>
@@ -105,7 +105,7 @@
 
                     <!-- Mock Fest -->
                 <a href="Projetos/MOCKFestival.html#Focus" class="project-link visuals" data-aos="fade-up" >
-                    <img src="imagens/Capas/MOCKFest_Capa.png" alt="Mock Fest">
+                    <img src="imagens/Capas/MOCKFEST_Capa.png" alt="Mock Fest">
                     <div class="overlay">WORTEN MOCK FEST <br> Mockup 3D</div>
                 </a>
 
