--- a/Projetos/MOCKFestival.html
+++ b/Projetos/MOCKFestival.html
@@ -147,7 +147,23 @@
   </div>
 </div>
 
+            <div class="text-container" id="Focus">
+                <h2>Live Event</h2>
+                <p>
+                    The event took place on <strong>August 28, 29, and 30, 2025 </strong>, featuring a wide range of comedians. The lineup included well-known Portuguese acts such as Ricardo Araújo Pereira, and Luís Franco Bastos, among others.
 
+                    In the international section, comedians like Jim Jefferies, returning to Portugal for the second tim, and Daniel Sloss were highlights of the festival.
+
+                  
+                </p>
+                <p>
+                  For more details, see the news coverage at
+                  <a class="link-eventos" href="https://sicnoticias.pt/cultura/2025-08-28-video-mock-fest-festival-de-comedia-leva-mais-de-100-artistas-ao-cinema-sao-jorge-c81bdf03" target="_blank"><strong>SIC Notícias</strong></a>
+                </p>
+                <p>
+                    Below you can explore the <strong>360º virtual tour </strong> of the festival area. The three dots in the bottom left corner allow you to directly choose a location. The "Top View" button lets you see the avenue and explore the exterior area in front of Cinema São Jorge. Use your mouse or touch to navigate!
+                </p>
+            </div>
 
 
               </div>
@@ -177,7 +193,7 @@
     </div>
     
 </div>
-</div>
+
      <!-- Footer Redesenhado -->
      <footer>
       <div class="footer-content">
