--- a/Projetos/MOCKFestival.html
+++ b/Projetos/MOCKFestival.html
@@ -68,7 +68,7 @@
             <!-- 360º -->
             <div style="width:100%;max-width:900px;margin:auto;">
                 <iframe 
-                  src="https://artrafsia.github.io/viewer.html?img=Cinema_SJorge%2FEntrada.jpg&title=Entrada&project=MOCK%20FESTIVAL%20-%20Cinema%20São%20Jorge" 
+                  src="https://artrafsia.github.io/viewer.html?img=Cinema_SJorge%2FEntrada.jpg&title=Entrada&projectId=mock-festival" 
                   width="100%" 
                   height="500" 
                   style="border:0;border-radius:12px;box-shadow:0 2px 16px rgba(0,0,0,0.15);" 
