--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
                     <a href="https://www.instagram.com/rafasilart/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://twitter.com/rafasilart" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
-                
+                <div>
+                    <a href="360.html" style="color: var(--laranja-secundario);">360º viewer for my projects</a>
+                </div>
                 <div class="copyright">
-                    <p>© 2024 Rafael Silva (Rafasilart). Todos os direitos reservados.</p>
+                    <p>© 2026 Rafael Silva (Rafasilart). Todos os direitos reservados.</p>
                     <p>Made with <span style="color: var(--laranja-secundario);">❤️</span> by me</p>
                     <p>Contact: <a href="mailto:rafasilart@gmail.com">rafasilart@gmail.com</a></p>
                 </div>
